# pandagamerfx-bot-template

./: README.md  Template  Update.md  index.md  keep_alive.py  main.py  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: codeql-analysis.yml
