[tool.poetry]
name = "pandagamerfx template"
version = "0.1.0"
description = " this is pandagamerfx bot template"
authors = ["@pandagamerfx#2748"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
discord = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
